working parallel execution - needs refactoring for locators